2006-04-24       Gaius Mulley <gaius@gnu.org>

	* GM2 Release 0.51
	* tagged CVS using gm2_0_51
	* gm2/NEWS updated
	* rebuilt configure
	* finished implementing declaration of variables at addresses.
	* modified gm2/bnf/m2-3.bnf, gm2/gm2-compiler/M2Quads,
	  gm2/gm2-compiler/SymbolTable.mod, gm2-compiler/P3SymBuild.mod

2006-04-22       Gaius Mulley <gaius@gnu.org>

	* implemented the declaration of a variable at an address.
	* modified gm2/bnf/m2-3.bnf, gm2/bnf/m2-2.bnf, gm2/gm2-compiler/M2Quads.mod

2006-04-21       Gaius Mulley <gaius@gnu.org>

	* added testsuite/gm2/pim/pass/varaddress.mod
	* modified gm2/bnf/m2.bnf, gm2/bnf/m2-2.bnf, gm2/bnf/m2-3.bnf,
	  gm2/bnf/m2-h.bnf to allow parsing of variables declared at addresses.

2006-04-19       Gaius Mulley <gaius@gnu.org>

	* added testsuite/gm2/pim/pass/sets5.mod
	* fixed bug report by John O Goyo <jgoyo@ca.inter.net>
	* (testsuite/gm2/pim/pass/sets5.mod and testsuite/gm2/pim/pass/sets4.mod)

2006-04-19       Gaius Mulley <gaius@gnu.org>

	* added testsuite/gm2/pim/pass/sets5.mod
	* fixed bug report by John O Goyo <jgoyo@ca.inter.net>
	* (testsuite/gm2/pim/pass/sets5.mod and testsuite/gm2/pim/pass/sets4.mod)

2006-03-25       Gaius Mulley <gaius@gnu.org>

	* added testsuite/gm2/pim/pass/sets4.mod
	* gm2/gm2-compiler/P2SymBuild.mod: added more robust error detection
	* gm2/gm2-compiler/M2GenGCC.mod: added more robust error detection

2006-03-17       Gaius Mulley <gaius@gnu.org>

	* added successful build reports to the web page

2006-02-21       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi: fixed new urls and added missing escaped @
	* gm2/gm2-libs.texi: rebuilt
	* gm2/gm2-iso/README.texi: fixed typo

2006-02-20       Gaius Mulley <gaius@gnu.org>

	* gm2/NEWS updated

2006-02-13       Gaius Mulley <gaius@gnu.org>

	* GM2 Release 0.50
	* tagged CVS using gm2_0_50
	* gm2/NEWS: added, which contains news of user visible changes.
	* gm2/Make-lang.in: updated version number