@@ -740,7 +740,7 @@ PROCEDURE BuildEndFunctionDeclaration (name: ADDRESS;
    BuildStartFunctionCode - generate function entry code.
 *)
 
-PROCEDURE BuildStartFunctionCode (fndecl: Tree; isexported: BOOLEAN) ;
+PROCEDURE BuildStartFunctionCode (fndecl: Tree; isexported, isinline: BOOLEAN) ;
 
 
 (*
